Moving new keys in the dopesheet editor doesn't update #56697

Closed
opened 2018-09-05 11:59:09 +02:00 by Hjalti Hjálmarsson · 5 comments

System Information
Xbuntu / AMD

Blender Version
d8ee615

Short description of error
If you key a pose and then move that key in the dopesheet editor, the pose doesn't update (until you do something like changing the color of a keyframe which updates everything).

Exact steps for others to reproduce the error
New file
You'll need the viewport and dopesheet editor
Select the cube and key the location
Scrub to frame 10
Move the cube to another position and key the location
Scrub to frame 4 and key the location
Grab the key on frame 4 and move it to frame 20
...Scrub between all the frames and you'll see it hasn't updated (it ignores the key that's on frame 20)...
Now change the color of any key (by hitting R) and everything has updated properly

**System Information** Xbuntu / AMD **Blender Version** d8ee615 **Short description of error** If you key a pose and then move that key in the dopesheet editor, the pose doesn't update (until you do something like changing the color of a keyframe which updates everything). **Exact steps for others to reproduce the error** New file You'll need the viewport and dopesheet editor Select the cube and key the location Scrub to frame 10 Move the cube to another position and key the location Scrub to frame 4 and key the location Grab the key on frame 4 and move it to frame 20 ...Scrub between all the frames and you'll see it hasn't updated (it ignores the key that's on frame 20)... Now change the color of any key (by hitting R) and everything has updated properly
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti

Added subscribers: @JoshuaLeung, @mont29

Added subscribers: @JoshuaLeung, @mont29
Joshua Leung was assigned by Bastien Montagne 2018-09-08 17:11:27 +02:00

@JoshuaLeung not sure how to fix this, looks like recalcData_actedit() does not have access to fcurves, so it cannot check whether re-ordering of keyframes is actually needed… Maybe we should just always call remake_graph_transdata() there?

@JoshuaLeung not sure how to fix this, looks like `recalcData_actedit()` does not have access to fcurves, so it cannot check whether re-ordering of keyframes is actually needed… Maybe we should just always call `remake_graph_transdata()` there?

This issue was referenced by d5e29f4140

This issue was referenced by d5e29f41403cede826f230224e713fade6156d32

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56697
No description provided.