Fix T56697: missing viewport update after keyframe edits in animation editors.

It was updating during transform, but not a final time after keyframes get
reordered or merged.